--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     </header>
 
     <div class="cards-grid">
-      <a href="index.html" class="card fade-in">
+      <a href="home.html" class="card fade-in">
         <div class="card-icon">CGPA</div>
         <h2 class="card-title">CGPA Calculator</h2>
         <p class="card-description">
